fix identation mobile #plus-btn

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ form {
   display: flex;
   gap: 5px;
   text-align: center;
+  align-items: center;
 }
 
 form button {
@@ -174,4 +175,10 @@ footer a {
   border-radius: 8px;
   background-color: rgb(255, 34, 34);
   color: white;
+}
+
+@media screen and (max-width: 768px) {
+  #plus-btn {
+    border-radius: none;
+  }
 }
